--- a/faperta/templates/faperta.html
+++ b/faperta/templates/faperta.html
@@ -25,6 +25,7 @@
     <h1 style="background-color: hwb(172 51% 9%);"><center>FAKULTAS PETERNAKAN DAN PERTANIAN</center></strong></h1>
    <h2><strong> <center>Tentang Kami</center></strong></h2>
     <h3><strong>Sejarah</strong></h3>
+    <center><img src="\static\images\faperta.jpg" width="250" height="250" alt=""></center>
         
     <p><font size="4"></font>Fakultas Pertanian Universitas Sultan Ageng Tirtayasa merupakan salah satu Fakultas yang ada di lingkungan Universitas Sultan Ageng Tirtayasa yang pada awalnya didirikan berdasarkan SK Ketua Yayasan Pendidikan Tirtayasa Nomor : 020/YPT/VIII/1984 tanggal 31 Agustus 1984 dengan Jurusan Sosial Ekonomi Pertanian Program Studi Sosial Ekonomi Pertanian.
 
