--- a/profil/templates/profil.html
+++ b/profil/templates/profil.html
@@ -23,6 +23,7 @@
     </style>
 
     <h1 style="background-color: hwb(172 51% 9%);"><center>PROFIL</center></strong></h1>
+    <center><img src="\static\images\Allynda.jpeg" width="250" height="350" alt=""></center>
         
     <p><font size="4"></font>Allynda Rohmah Nurfadila dari kelas 3C dengan NIM 2225210085. Kuliah di Universitas Sultan Ageng Tirtayasa Fakultas Keguruan dan Ilmu Pendidikan Jurusan Pendidikan Matematika. Mata kuliah Teknologi Informasi dan Komunikasi untuk Pembelajaran yang diampu oleh Bapak Dr. Aan Hendrayana.</p>
 <br>
