--- a/fh/templates/fh.html
+++ b/fh/templates/fh.html
@@ -25,6 +25,7 @@
     <h1 style="background-color: hwb(172 51% 9%);"><center>FAKULTAS HUKUM</center></strong></h1>
    <h2><strong> <center>Tentang Kami</center></strong></h2>
     <h3><strong>Sejarah</strong></h3>
+    <center><img src="\static\images\logofh.jpg" width="250" height="250" alt=""></center>
         
     <p><font size="4"></font>Fakultas Hukum Universitas Sultan Ageng Tirtayasa Banten berdiri tahun 1981, tepatnya pada tanggal 1 Oktober 1981 dengan status sebagai STIH Serang yan bertempat di Kresidenan Banten, Jl. K.H. Sam’un dan merupakan embrio lahirnya Universitas Sultan Ageng Tirtayasa Banten. Mulai tahun 1984, STIH Serang di integrasi sesuai dengan SK Mendikbud No. 0596/0/1984, menjadi Fakultas Hukum Universitas Sultan Ageng Tirtayasa Banten, yang bertempat di Jl. Raya Jakarta KM. 4 Pakupatan – Serang.
 
