--- a/fisip/templates/fisip.html
+++ b/fisip/templates/fisip.html
@@ -25,6 +25,7 @@
     <h1 style="background-color: hwb(172 51% 9%);"><center>FAKULTAS ILMU SOSIAL DAN ILMU POLITIK</center></strong></h1>
    <h2><strong> <center>Tentang Kami</center></strong></h2>
     <h3><strong>Sejarah</strong></h3>
+    <center><img src="\static\images\fisip.jpg" width="400" height="250" alt=""></center>
         
     <p><font size="4"></font>Pada saat Universitas Sultan Ageng Tirtayasa (Untirta) sedang mempersiapkan pengalihan status negeri secara utuh dan menyeluruh dengan ditandainya pengalihan aset dan pengelolaan sumber daya dari Yayasan Pendidikan Tirtayasa kepada pemerintah yang dilaksanakan paling lama dalam kurun waktu tiga tahun. Maka pada tanggal 10 Juni 2003 dikeluarkan Surat Keputusan dari DIRJEN DIKTI DEPDIKNAS dengan nomor 1179/D/ T/2003 tentang izin operasional program studi Ilmu Administrasi Negara dan Ilmu Komunikasi, seiring dengan operasional program studi maka Fakultas Ilmu Sosial dan Ilmu Politik didirikan pada tahun akademik 2002/2003  yang mendapat legitimasi menjadi bagian dari Untirta dengan surat keputusan nomor 124/0/2004 sesuai dengan SOTK.
 
