--- a/fk/templates/fk.html
+++ b/fk/templates/fk.html
@@ -25,6 +25,7 @@
     <h1 style="background-color: hwb(172 51% 9%);"><center>FAKULTAS KEDOKTERAN</center></strong></h1>
    <h2><strong> <center>Tentang Kami</center></strong></h2>
     <h3><strong>Sejarah</strong></h3>
+    <center><img src="\static\images\fkuntirta.jpeg" width="400" height="250" alt=""></center>
         
     <p><font size="4"></font>Fakultas Kedokteran UNTIRTA merupakan fakultas baru di universitas Sultan Ageng Tirtayasa yang terbentuk sejak program studi pendidikan dokter disahkan berdasarkan SK Menteri Riset Teknologi dan Pendidikan Tinggi Republik Indonesia Nomor 283/KPT/I/2019. Program studi Kedokteran Untirta saat ini dibawah pengampuan FK UI.</p>
 <br>
