--- a/ft/templates/ft.html
+++ b/ft/templates/ft.html
@@ -25,6 +25,7 @@
     <h1 style="background-color: hwb(172 51% 9%);"><center>FAKULTAS TEKNIK</center></strong></h1>
    <h2><strong> <center>Tentang Kami</center></strong></h2>
     <h3><strong>Sejarah</strong></h3>
+    <center><img src="\static\images\ftuntirta.jpeg" width="400" height="250" alt=""></center>
         
     <p><font size="4"></font>Berdirinya Fakultas Teknik diawali dengan berdirinya Sekolah Tinggi Teknologi yang didirikan oleh PT. Krakatau Steel pada tahun 1982 dengan ijin penyelenggaraan untuk tingkat Sarjana Muda (Non Gelar) dari Kopertis Wilayah IV Jawa Barat Nomor: 040/1982. Kemudian pada tahun 1984 berdasarkan Surat Keputusan Menteri Pendidikan dan Kebudayaan RI Nomor: 0596/O/1984, Sekolah Tinggi Teknologi menggabungkan diri ke dalam Universitas Tirtayasa Banten.</p>
 <br>
