--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UNTIRTA</title>
     <link rel="stylesheet" href="{%static 'css/style.css'%}">
+    <link rel="stylesheet" href="{%static 'css/bootstrap.css'%}">
 </head>
 <body>
     {% include 'navbar.html' %}
     {% block content %}
     {% endblock %}
+    <script src="{%static 'js/bootstrap.js'%}"></script>
 </body>
 </html>
